<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AuthFragments.ForgetPasswordFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/forgot_design"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_50sdp"
                android:src="@drawable/charity_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                android:gravity="center"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_18sdp"
                android:fontFamily="@font/poppins_bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/enter_the_email_you_signed_up_with_and_we_will_send_you_a_new_password"
                android:gravity="center"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/poppins_bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/email_address"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/poppins_medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="start|center"
                android:background="@drawable/edit_text_background"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/countryCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_defaultNameCode="bd" />

                <EditText
                    android:id="@+id/forgetMobileET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:background="@android:color/transparent"
                    android:inputType="phone"
                    android:digits="0123456789"
                    android:imeOptions="actionDone"
                    android:hint="@string/_8801"
                    android:textSize="@dimen/_11sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingStart="@dimen/_15sdp" />

            </LinearLayout>


            <Button
                android:id="@+id/forgetSendBtn"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/send"
                android:textSize="@dimen/_12sdp"
                android:letterSpacing="0"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_medium" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>