<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.AuthFragments.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sign_in_design"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Sign Up"
                    android:textColor="@color/auth_black"
                    android:textSize="@dimen/_18sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/full_name"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/poppins_medium"/>
            <EditText
                android:id="@+id/signUpNameET"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textColor="@color/black"
                android:background="@drawable/edit_text_background"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:hint="@string/your_name"
                android:textSize="@dimen/_11sdp"
                android:fontFamily="@font/poppins_medium"
                android:paddingStart="@dimen/_15sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/your_email"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/poppins_medium"/>
            <EditText
                android:id="@+id/signUpEmailET"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textColor="@color/black"
                android:background="@drawable/edit_text_background"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                android:hint="@string/email"
                android:textSize="@dimen/_11sdp"
                android:fontFamily="@font/poppins_medium"
                android:paddingStart="@dimen/_15sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/phone_number"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/poppins_medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="start|center"
                android:background="@drawable/edit_text_background"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/countryCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_defaultNameCode="bd" />

                <EditText
                    android:id="@+id/signUpPhoneET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:background="@android:color/transparent"
                    android:inputType="phone"
                    android:digits="0123456789"
                    android:imeOptions="actionDone"
                    android:hint="@string/_8801"
                    android:textSize="@dimen/_11sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingStart="@dimen/_15sdp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/password"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/poppins_medium"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/edit_text_background"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/signUpPassET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:hint="Password"
                    android:textSize="@dimen/_11sdp"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:paddingTop="15dp"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/confirm_password"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/poppins_medium"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/edit_text_background"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/signUpConfPassET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:paddingTop="15dp"
                    android:textSize="@dimen/_11sdp"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/sign_up"
                android:textSize="@dimen/_12sdp"
                android:letterSpacing="0"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_regular" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/auth_black"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_light"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/signInBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/forgot_design"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_23sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Sign In"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>